# InterProcessCommunication_Practice

./: .gitignore  README.md  flexible-array-notes.md  image_processor.cpp  image_reader.cpp  ipc-notes.md  shared_memory.h
EncapsulationByClaude/: CMakeLists.txt  README.md  example_continuous.cpp  example_processor.cpp  example_reader.cpp  image_processor.cpp  image_processor.h  image_reader.cpp  image_reader.h  shared_memory_manager.cpp  shared_memory_manager.h
